--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           fixed="true"
 
           autoplay="true" 
-          order="list" 
+          order="random" 
           loop="all"></meting-js>
       </div>
   </div>
